--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,14 @@
 -e .
 
 # external requirements
-click
+click~=8.1.7
 Sphinx
 coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+
+dataclasses~=0.8
+yaml~=0.2.5
+pyyaml~=6.0.1
+setuptools~=68.0.0
