--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,25 @@ scikit-learn~=1.3.1
 numpy~=1.26.0
 joblib~=1.3.2
 catboost~=1.2.2
-pytest~=7.4.2
+pytest~=7# local package
+-e .
+
+# external requirements
+numpy==1.19.5
+scikit-learn==0.24.1
+pandas==1.1.5
+pytest==7.4.0
+catboost==0.26
+marshmallow-dataclass==8.5.8
+marshmallow==3.17.0
+mlflow==2.5.0
+dvc>=2.0.0
+shap==0.39.0
+fastapi==0.92.0
+uvicorn==0.20.0
+httpx==0.24.1
+
+flake8
+python-dotenv>=0.5.1
+prometheus-fastapi-instrumentator
+prometheus-client.4.2
