--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,6 @@
 -e .
 
 # external requirements
-click~=8.1.7
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-pyyaml~=6.0.1
-setuptools~=68.0.0
-pandas~=2.1.1
-scikit-learn~=1.3.1
-numpy~=1.26.0
-joblib~=1.3.2
-catboost~=1.2.2
-pytest~=7# local package
--e .
-
-# external requirements
 numpy==1.19.5
 scikit-learn==0.24.1
 pandas==1.1.5
@@ -36,4 +19,4 @@ httpx==0.24.1
 flake8
 python-dotenv>=0.5.1
 prometheus-fastapi-instrumentator
-prometheus-client.4.2
+prometheus-client
