dvc, s3_vk_cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ catboost~=1.2.2
 marshmallow-dataclass==8.5.8
 marshmallow==3.17.0
 mlflow==2.5.0
-dvc>=2.0.0
+dvc==3.38.1
 shap==0.39.0
 fastapi==0.92.0
 uvicorn==0.20.0
