--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ marshmallow-dataclass==8.5.8
 marshmallow==3.17.0
 mlflow==2.5.0
 dvc==3.38.1
-shap==0.39.0
+shap==0.44.0
 uvicorn==0.20.0
 httpx==0.24.1
 flake8
@@ -22,4 +22,5 @@ joblib~=1.3.2
 dataclasses==0.6
 pyyaml~=6.0.1
 setuptools~=68.0.0
-boto3~=1.29.1
+boto3~=1.33.13
+yaml~=0.2.5
