--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,10 @@ target/
 
 # Mypy cache
 .mypy_cache/
+
+artifacts/
+catboost_info/
+data/raw/sampled_train_5m.csv
+mlartifacts/
+mlruns/
+models/
