--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -20,7 +20,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/ctr_online_inference
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/ctr_project_inference
           tags: |  
             type=ref,event=branch  
             type=ref,event=pr  
